--- a/pagina-tecnimotors/src/app/header/header.component.scss
+++ b/pagina-tecnimotors/src/app/header/header.component.scss
@@ -183,3 +183,11 @@
   overflow-y: auto;
   margin: 0px;
 }
+.classimgvacio {
+  width: 120px;
+  height: 120px;
+}
+.classimglleno {
+  width: 120px;
+  height: 120px;
+}
